Fix PR c++/68936

gcc/cp/ChangeLog:

	PR c++/68936
	* tree.c (build_min_non_dep_call_vec): Don't retain the
	KOENIG_LOOKUP_P flag of the non-dependent expression that's
	been built.
	(build_min_non_dep_op_overload): Instead, do it here.

gcc/testsuite/ChangeLog:

	PR c++/68936
	* g++.dg/template/pr68936.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@232461 138bc75d-0d04-0410-961f-82ee72b054a4